--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 															<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 																 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 															<g>
-																<path fill="#F91791" d="M93.027,65.04V20.497c0-2.614-2.129-4.743-4.743-4.743H11.721c-2.62,0-4.748,2.129-4.748,4.743v44.549
+																<path fill="#3879b2" d="M93.027,65.04V20.497c0-2.614-2.129-4.743-4.743-4.743H11.721c-2.62,0-4.748,2.129-4.748,4.743v44.549
 																	c0,0,0,0,0,0.006v3.081c0,2.614,2.128,4.743,4.742,4.743h26.896c1.474,1.146,2.286,2.559,2.286,4.027
 																	c0,1.274-0.618,2.499-1.734,3.548H23.128c-1.049,0-1.898,0.849-1.898,1.898c0,1.049,0.85,1.898,1.898,1.898h53.749
 																	c1.043,0,1.892-0.849,1.892-1.898c0-1.049-0.849-1.898-1.892-1.898H60.843c-1.116-1.049-1.734-2.274-1.734-3.548
@@ -267,24 +267,24 @@
 																	 M57.247,80.45H42.759c0.631-1.104,0.977-2.305,0.977-3.548c0-1.425-0.425-2.796-1.249-4.027h15.028
 																	c-0.812,1.231-1.243,2.601-1.243,4.027C56.27,78.145,56.616,79.346,57.247,80.45z M88.291,70.031H60.916H39.09H11.715
 																	c-1.043,0-1.892-0.849-1.892-1.898v-1.631h80.366v1.631C90.189,69.182,89.334,70.031,88.291,70.031z"/>
-																<path fill="#F91791" d="M48.605,58.691H16.354c-0.782,0-1.425-0.637-1.425-1.419V25.021c0-0.782,0.643-1.419,1.425-1.419h32.251
+																<path fill="#3879b2" d="M48.605,58.691H16.354c-0.782,0-1.425-0.637-1.425-1.419V25.021c0-0.782,0.643-1.419,1.425-1.419h32.251
 																	c0.782,0,1.419,0.637,1.419,1.419v32.251C50.024,58.054,49.387,58.691,48.605,58.691z M17.773,55.846H47.18V26.44H17.773V55.846z"
 																	/>
-																<path fill="#F91791" d="M26.445,50.613c-0.243,0-0.491-0.06-0.715-0.188c-0.437-0.255-0.71-0.722-0.71-1.231V33.068
+																<path fill="#3879b2" d="M26.445,50.613c-0.243,0-0.491-0.06-0.715-0.188c-0.437-0.255-0.71-0.722-0.71-1.231V33.068
 																	c0-0.509,0.273-0.976,0.71-1.237c0.442-0.248,0.988-0.248,1.425,0l13.966,8.066c0.443,0.255,0.709,0.722,0.709,1.231
 																	c0,0.509-0.266,0.976-0.709,1.231l-13.966,8.066C26.937,50.552,26.694,50.613,26.445,50.613z M27.865,35.53v11.195l9.697-5.597
 																	L27.865,35.53z"/>
-																<path fill="#F91791" d="M82.73,26.44H57.125c-0.782,0-1.419-0.637-1.419-1.419c0-0.782,0.637-1.419,1.419-1.419H82.73
+																<path fill="#3879b2" d="M82.73,26.44H57.125c-0.782,0-1.419-0.637-1.419-1.419c0-0.782,0.637-1.419,1.419-1.419H82.73
 																	c0.782,0,1.413,0.637,1.413,1.419C84.143,25.803,83.512,26.44,82.73,26.44z"/>
-																<path fill="#F91791" d="M75.064,32.832H57.125c-0.782,0-1.419-0.637-1.419-1.419c0-0.788,0.637-1.425,1.419-1.425h17.939
+																<path fill="#3879b2" d="M75.064,32.832H57.125c-0.782,0-1.419-0.637-1.419-1.419c0-0.788,0.637-1.425,1.419-1.425h17.939
 																	c0.782,0,1.419,0.637,1.419,1.425C76.483,32.195,75.847,32.832,75.064,32.832z"/>
-																<path fill="#F91791" d="M66.532,45.931h-9.406c-0.782,0-1.419-0.643-1.419-1.425v-6.719c0-0.789,0.637-1.425,1.419-1.425h9.406
+																<path fill="#3879b2" d="M66.532,45.931h-9.406c-0.782,0-1.419-0.643-1.419-1.425v-6.719c0-0.789,0.637-1.425,1.419-1.425h9.406
 																	c0.788,0,1.425,0.637,1.425,1.425v6.719C67.957,45.288,67.32,45.931,66.532,45.931z M58.551,43.081h6.562v-3.869h-6.562V43.081z"/>
 																<path fill="#F91791" d="M82.73,45.931h-9.413c-0.782,0-1.419-0.643-1.419-1.425v-6.719c0-0.789,0.637-1.425,1.419-1.425h9.413
 																	c0.782,0,1.413,0.637,1.413,1.425v6.719C84.143,45.288,83.512,45.931,82.73,45.931z M74.743,43.081h6.562v-3.869h-6.562V43.081z"/>
-																<path fill="#F91791" d="M66.532,58.691h-9.406c-0.782,0-1.419-0.637-1.419-1.419v-6.719c0-0.789,0.637-1.42,1.419-1.42h9.406
+																<path fill="#3879b2" d="M66.532,58.691h-9.406c-0.782,0-1.419-0.637-1.419-1.419v-6.719c0-0.789,0.637-1.42,1.419-1.42h9.406
 																	c0.788,0,1.425,0.631,1.425,1.42v6.719C67.957,58.054,67.32,58.691,66.532,58.691z M58.551,55.846h6.562v-3.875h-6.562V55.846z"/>
-																<path fill="#F91791" d="M82.73,58.691h-9.413c-0.782,0-1.419-0.637-1.419-1.419v-6.719c0-0.789,0.637-1.42,1.419-1.42h9.413
+																<path fill="#3879b2" d="M82.73,58.691h-9.413c-0.782,0-1.419-0.637-1.419-1.419v-6.719c0-0.789,0.637-1.42,1.419-1.42h9.413
 																	c0.782,0,1.413,0.631,1.413,1.42v6.719C84.143,58.054,83.512,58.691,82.73,58.691z M74.743,55.846h6.562v-3.875h-6.562V55.846z"/>
 															</g>
 															</svg>
@@ -298,12 +298,12 @@
 															 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 														<g id="Layer_1_1_">
 															<g>
-																<path fill="#F91791" d="M14.555,24.372H74.48v9.35h5.015v-11.22c0-1.7-1.445-3.145-3.145-3.145H12.77
+																<path fill="#3879b2" d="M14.555,24.372H74.48v9.35h5.015v-11.22c0-1.7-1.445-3.145-3.145-3.145H12.77
 																	c-1.7,0-3.145,1.445-3.145,3.145v43.095c0,1.7,1.36,3.145,3.145,3.145h25.585v5.695h-5.61c-0.85,0-1.53,0.68-1.53,1.53v2.975
 																	c0,0.85,0.68,1.53,1.53,1.53h23.8c0.85,0,1.53-0.68,1.53-1.53v-2.975c0-0.85-0.68-1.53-1.53-1.53H50.85v-5.695h11.73V57.778
 																	H14.555V24.372z M44.56,61.007c1.19,0,2.21,1.02,2.21,2.21s-1.02,2.21-2.21,2.21s-2.21-1.02-2.21-2.21S43.37,61.007,44.56,61.007z
 																	"/>
-																<path fill="#F91791" d="M86.975,37.292h-17.51c-1.87,0-3.315,1.53-3.315,3.4v36.55c0,1.87,1.53,3.4,3.315,3.4h17.51
+																<path fill="#3879b2" d="M86.975,37.292h-17.51c-1.87,0-3.315,1.53-3.315,3.4v36.55c0,1.87,1.53,3.4,3.315,3.4h17.51
 																	c1.87,0,3.4-1.53,3.4-3.4V40.608C90.375,38.737,88.845,37.292,86.975,37.292z M75.415,39.757h5.525
 																	c0.425,0,0.765,0.34,0.765,0.765c0,0.425-0.34,0.765-0.765,0.765h-5.525c-0.425,0-0.765-0.34-0.765-0.765
 																	C74.65,40.097,74.99,39.757,75.415,39.757z M78.22,78.092c-1.19,0-2.21-1.02-2.21-2.21s1.02-2.21,2.21-2.21
@@ -363,7 +363,7 @@
 																	<clipPath id="SVGID_2_">
 																		<use xlink:href="#SVGID_1_"  overflow="visible"/>
 																	</clipPath>
-																	<path clip-path="url(#SVGID_2_)" fill="#F91791" d="M93.125,48.551v2.829c0,0.138-0.069,0.276-0.069,0.483
+																	<path clip-path="url(#SVGID_2_)" fill="#3879b2" d="M93.125,48.551v2.829c0,0.138-0.069,0.276-0.069,0.483
 																		c-0.138,1.242-0.276,2.484-0.414,3.726c-0.69,4.002-2.07,7.659-4.209,11.109c-3.243,5.175-7.59,9.177-13.11,11.868
 																		c-3.174,1.587-6.624,2.553-10.074,2.967c-0.759,0.069-1.587,0.138-2.346,0.276h-30.36c-0.138,0-0.276-0.069-0.483-0.069
 																		c-3.036-0.207-6.003-0.897-8.763-2.139c-6.141-2.691-10.626-6.969-13.662-12.972c-1.311-2.622-2.139-5.451-2.484-8.349
@@ -397,7 +397,7 @@
 													<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 														 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 													<g>
-														<path fill="#F91791" d="M18.55,74.651c13.6,1.87,27.2,3.825,41.055,5.695c0-19.38,0-38.59,0-58.14c-3.23,0.765-6.29,1.53-9.35,2.21
+														<path fill="#3879b2" d="M18.55,74.651c13.6,1.87,27.2,3.825,41.055,5.695c0-19.38,0-38.59,0-58.14c-3.23,0.765-6.29,1.53-9.35,2.21
 															c-5.865,1.445-11.645,2.89-17.51,4.165c-1.36,0.34-1.785,0.85-1.785,2.21c0,11.985,0,23.97,0,35.87c0,1.19-0.34,1.87-1.53,2.38
 															c-4.165,1.53-8.33,3.23-12.75,4.93c-0.085-0.765-0.17-1.275-0.17-1.87c0-14.875,0-29.75-0.085-44.625
 															c0-1.36,0.34-1.955,1.615-2.465c13.685-4.76,27.115-9.86,40.545-14.875c0.68-0.255,1.53-0.255,2.21-0.085
@@ -411,7 +411,7 @@
 													<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 														 viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
 													<style type="text/css">
-														.analytics0{fill:#F91791;}
+														.analytics0{fill:#3879b2;}
 													</style>
 													<g>
 														<path class="analytics0" d="M93.9,51.2c0,10.9,0,21.7,0,32.6c0,7.8-2.5,10.3-10.1,10.3c-22,0-44,0-66.1-0.1c-7.5,0-9.9-2.5-10-9.8
@@ -895,7 +895,7 @@
 										<g>
 											<rect id="body" x="86.932" y="139.008" fill="#F91791" width="1.136" height="32.474"/>
 										</g>
-										<path id="body" fill="#F91791" d="M98.936,172.664H76.065c-0.957,0-1.732-0.775-1.732-1.733v-64.018L50.684,83.252
+										<path id="body" fill="#3879b2" d="M98.936,172.664H76.065c-0.957,0-1.732-0.775-1.732-1.733v-64.018L50.684,83.252
 											c-0.676-0.678-0.676-1.774,0-2.452l5.475-5.475c0.325-0.325,0.767-0.507,1.226-0.507l0,0c0.459,0,0.901,0.182,1.226,0.507
 											l18.196,18.211c2.389-1.139,5.014-1.737,7.662-1.737h6.064c2.642,0,5.258,0.598,7.647,1.737l18.211-18.211
 											c0.676-0.676,1.776-0.676,2.452,0l5.475,5.475c0.675,0.678,0.675,1.774,0,2.452l-23.646,23.662v64.018
@@ -912,24 +912,24 @@
 											<rect id="confetti" x="56.107" y="111.686" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -68.8289 137.8797)" fill="#F91791" width="3.859" height="6.811"/>
 
 											<rect id="confetti" x="106.707" y="52.286" transform="matrix(0.6441 0.7649 -0.7649 0.6441 81.2605 -63.2794)" fill="#F91791" width="3.859" height="6.811"/>
-										<circle id="confetti" fill="#F91791" cx="83.981" cy="43.822" r="3.399"/>
-										<path id="confetti" fill="#F91791" d="M138.857,89.914c0.671,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
+										<circle id="confetti" fill="#3879b2" cx="83.981" cy="43.822" r="3.399"/>
+										<path id="confetti" fill="#3879b2" d="M138.857,89.914c0.671,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
 											s0.207-3.719,1.961-4.389C136.221,87.282,138.186,88.16,138.857,89.914z"/>
-										<path id="confetti" fill="#F91791" d="M48.504,48.305l-0.141,0.141c-0.389,0.389-1.025,0.389-1.414,0L29.695,31.193
+										<path id="confetti" fill="#3879b2" d="M48.504,48.305l-0.141,0.141c-0.389,0.389-1.025,0.389-1.414,0L29.695,31.193
 											c-0.389-0.389-0.389-1.025,0-1.414l0.141-0.141c0.389-0.389,1.025-0.389,1.414,0L48.504,46.89
 											C48.893,47.279,48.893,47.916,48.504,48.305z"/>
-										<path id="confetti" fill="#F91791" d="M87.6,32.441h-0.2c-0.55,0-1-0.45-1-1l0-24.4c0-0.55,0.45-1,1-1h0.2c0.55,0,1,0.45,1,1l0,24.4
+										<path id="confetti" fill="#3879b2" d="M87.6,32.441h-0.2c-0.55,0-1-0.45-1-1l0-24.4c0-0.55,0.45-1,1-1h0.2c0.55,0,1,0.45,1,1l0,24.4
 											C88.6,31.991,88.15,32.441,87.6,32.441z"/>
-										<path id="confetti" fill="#F91791" d="M128.836,46.246l-0.141-0.141c-0.389-0.389-0.389-1.025,0-1.414l17.253-17.253
+										<path id="confetti" fill="#3879b2" d="M128.836,46.246l-0.141-0.141c-0.389-0.389-0.389-1.025,0-1.414l17.253-17.253
 											c0.389-0.389,1.025-0.389,1.414,0l0.141,0.141c0.389,0.389,0.389,1.025,0,1.414l-17.253,17.253
 											C129.862,46.635,129.225,46.635,128.836,46.246z"/>
-										<path id="confetti" fill="#F91791" d="M108.656,35.756l-0.183-0.081c-0.503-0.222-0.733-0.816-0.511-1.319l9.861-22.318
+										<path id="confetti" fill="#3879b2" d="M108.656,35.756l-0.183-0.081c-0.503-0.222-0.733-0.816-0.511-1.319l9.861-22.318
 											c0.222-0.503,0.816-0.733,1.319-0.511l0.183,0.081c0.503,0.222,0.733,0.816,0.511,1.319l-9.861,22.318
 											C109.753,35.748,109.159,35.978,108.656,35.756z"/>
-										<path id="confetti" fill="#F91791" d="M66.831,36.003l-0.188,0.069c-0.516,0.189-1.094-0.079-1.283-0.595l-8.388-22.913
+										<path id="confetti" fill="#3879b2" d="M66.831,36.003l-0.188,0.069c-0.516,0.189-1.094-0.079-1.283-0.595l-8.388-22.913
 											c-0.189-0.516,0.079-1.094,0.595-1.283l0.188-0.069c0.516-0.189,1.094,0.079,1.283,0.595l8.388,22.913
 											C67.616,35.236,67.348,35.814,66.831,36.003z"/>
-										<path id="confetti" fill="#F91791" d="M49.688,57.457c0.67,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
+										<path id="confetti" fill="#3879b2" d="M49.688,57.457c0.67,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
 											c-0.671-1.754,0.207-3.719,1.961-4.389C47.052,54.826,49.017,55.704,49.688,57.457z"/>
 									</g>
 									</svg>
@@ -1287,7 +1287,7 @@
 						<a href="https://www.facebook.com/jouihri" target="_blank"><i class="fa fa-facebook"></i></a>
 						<a href="https://plus.google.com/u/0/115133210735023070083/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
 					</div>
-					<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Contactez moi</a>
+					<a href="mailto:mehdi_jouihri@hotmail.com" title="farishta.haider@gmail.com" class="button">Contactez moi</a>
 					<div class="copy">© Copyright 2023 El mehdi Jouihri</div>
 				</div>
 			</section>
