--- a/resume.html
+++ b/resume.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Farishta Haider Resume</title>
+	<title>El Mehdi jouihri</title>
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/resume.css" media="screen, projection" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="/images/composica.svg" />
 
 	<link rel="stylesheet" href="stylesheets/animate.css">
 	<link rel="stylesheet" href="stylesheets/Audrey-Normal.css">
@@ -62,7 +63,7 @@
 	</div>
 
   <div class="banner">
-    <h1 class="heading">Farishta Haider</h1>
+    <h1 class="heading">Jouihri el mehdi</h1>
     <h2 class="subHeading">Web Developer</h2>
   </div>
 
@@ -70,19 +71,19 @@
     <div class="email">
       <a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com">
         <i class="far fa-envelope"></i>
-        farishta.haider<span>@</span>gmail.com
+        mehdi<span>_</span>jouihri<span>@</span>hotmail.com
 			</a>
     </div>
     <div class="tel">
-      <a href="tel:301-509-2483">
+      <a href="tel:0033766175646">
       <i class="fas fa-phone"></i>
-        301.509.2483
+        (+33)766.175.646
       </a>
     </div>
     <div class="website">
-      <a href="www.farishtahaider.com" target="_blank">
+      <a href="https://mehdijouihri.github.io/portfolio/" target="_blank">
       	<i class="fas fa-laptop"></i>
-        www.farishtahaider.com
+        www.mehdijouihri.com
 			</a>
     </div>
   </header>
@@ -125,7 +126,7 @@
           <h2 class="sectionTitle">SOFT SKILLS</h2>
           <ul>
             <li>Creative</li>
-            <li>Résoudre les problemes</li>
+            <li>Résoudre les problèmes</li>
             <li>Adaptation</li>
             <li>Optimiste</li>
             <li> Travail d'équipe</li>
@@ -135,110 +136,100 @@
         <div class="section education">
           <h2 class="sectionTitle">EDUCATION</h2>
 					<p class="school">
-						<span class="blue">General Assembly</span></br>
-							Washington, D.C.</br>
-							Web Development Immersive</br>
-							February - June 2016</p>
+						<span class="blue">Pigier Groupe</span></br>
+							Safi ,  Maroc</br>
+							Comptabilité Géneral, </br>
+              Comptabilité Annalytique </br>
+							Septembre 1990 - aout  1994</p>
         	<p class="school">
-						<span class="blue">University of Maryland</span></br>
-						College Park, M.D.</br>
-	          Bachelor of Arts</br>
-						Communication Major</br>
-	          1999 - 2004</p>
+						<span class="blue">I.M.E.P</span></br>
+						Institut Marocaine des Etudes Professionnelles</br>
+	          Settat - Maroc</br>
+						Programation en Basic, Quick-basic</br>
+            turbo pascal, Dbase IIIplus, cobol, visual basic </br>
+	          1995 - 1996</p>
         </div>
-        <div class="section social">
-          <h2 class="sectionTitle">SOCIAL</h2>
-					<div class="socialContainer">
-	  				<a href="https://github.com/LaFrish" target="_blank"><i class="fab fa-github"></i></a>
-	  				<a href="http://codepen.io/lafrish/" target="_blank"><i class="fab fa-codepen"></i></a>
-	  				<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fab fa-linkedin"></i></a>
-	  				<a href="https://twitter.com/lafrish" target="_blank"><i class="fab fa-twitter"></i></a>
-  				 	<!-- <a href="https://www.behance.net/LaFrish" target="_blank"><i class="fab fa-behance"></i></a> -->
-					</div>
-        </div>
-        <!-- <div class="section awards">
-          <h2 class="sectionTitle">AWARDS</h2>
+        
+        <div class="section awards">
+          <h2 class="sectionTitle">LANGUES</h2>
           <ul>
-            <li></li>
+            <li>Français</li>
+            <li>Anglais</li>
+            <li>Italien</li>
+            <li>arabe</li>
           </ul>
-        </div> -->
+        </div>
       </div>
       <div class="rightColumn">
         <div class="experience">
           <h2 class="sectionTitle">EXPERIENCE</h2>
           <div class="job">
             <div class="infoContainer">
-              <h2 class="title">Web Developer, <span class="year">February 2017 to August 2018</span></h2>
-              <h2 class="company">TEKsystems, <span class="location">Hanover, MD</span></h2>
+              <h2 class="title">Comptable <span class="year">juin 1996 á août 1998</span></h2>
+              <h2 class="company">Arab National Bank, Riyadh <span class="location">Saudi Arabia</span></h2>
             </div>
             <ul>
-              <li>Provided services for the Allegis Group’s over 10 family of companies.
-              <li>Worked collaboratively as part of a multi-faceted agile team including other developers, designers, videographers and management.</li>
-              <li>Utilized Adobe Creative Suite for designing graphics, altering audio and videos for a multitude of platforms.</li>
-              <li>Designed, developed and maintained interactive web pages to meet the varying needs of our clients. Ensuring pages are responsive and compatible in all major browsers.</li>
-              <li>Programmed in HTML, CSS, JavaScript, jQuery, ReactJS and Sass.</li>
-              <li>Designed and Developed dynamic eLearning solutions to educate internal audiences. Work closely with the Instructional Designers to ensure information is accurate and that their needs have been met. </li>
-              <li>Created web-based training assets and courses that incorporated graphics, animations, videos, simulations, assessments, interactivity and games.</li>
-              <li>Utilized development tools to create top-notch courses: Composica, Articulate 360 and Adobe Captivate.</li>
+              <li>Caissier.
+              <li>Service Client.</li>
+              <li>Telemoney transfert d'argent avec le system <span style="color:brown">(Telemoney)</span>.</li>
+              <li>Resources Humaines.</li>
+              <li>Sécrétariat.</li>
+              <li>Archives, . </li>
+              <li>Collection des Fonds.</li>
             </ul>
           </div>
           <div class="job">
             <div class="infoContainer">
-              <h2 class="title">Junior Web Developer Intern, <span class="year">June 2016 to February 2017</span></h2>
-              <h2 class="company">ProTrakr, <span class="location">Washington, D.C.</span></h2>
+              <h2 class="title">Comptable, <span class="year">septembre 1998 á juillet 2003 </span></h2>
+              <h2 class="company">Ambassade de Belgique, <span class="location">Riyadh, Saudi Arabia</span></h2>
             </div>
             <ul>
-              <li>Developed and optimized new user-facing features.</li>
-              <li>Built re-usable code and libraries for future use.</li>
-              <li>Ensured technical feasibility of UI/UX designs.</li>
-              <li>Optimizes applications for maximum speed and scalability.</li>
-              <li>Worked with Ruby on Rails, Haml, HTML, Sass, JavaScript and jQuery.</li>
+              <li>Comptabilité Générale. établire le bilan Trimestrieele</li>
+              <li>Saisie des factures.</li>
+              <li>Préparation des fiches de paie.</li>
+              <li>saissire des bons de commandes.</li>
+              <li>Géstion de la Caisse/Banque .</li>
             </ul>
           </div>
           <div class="job">
             <div class="infoContainer">
-              <h2 class="title">Marketing Consultant, <span class="year">July 2015 to February 2016</span></h2>
-              <h2 class="company">Montage Marketing <span class="location">Bethesda, MD</span></h2>
+              <h2 class="title">Opérateur sur machine , <span class="year">septembre 2003 - juin 2007</span></h2>
+              <h2 class="company">Rialti Spa <span class="location">Sesto Calende, Italia</span></h2>
             </div>
             <ul>
-              <li>Setup and monitored analytic dashboards and supporting programs.</li>
-              <li>Developed SEO strategies, implemented and monitored campaigns.</li>
-              <li>Performed site analysis, keyword research, site mapping and assess link building opportunities.</li>
-              <li>Developed, managed and grew the company’s social media platforms.</li>
-              <li>Researched content for outbound social media posts.</li>
-              <li>Created Social Content Database to optimally manage and organize the social program.</li>
-              <li>Created graphics and designs for social media platforms and presentations.</li>
-              <li>Maintained the company’s website; adding features to increase online engagement.</li>
-              <li>Designed and programmed interactive gaming element for Fannie Mae event.</li>
+              <li> préparation de la machine </li>
+              <li>Approvisionement de la machine.</li>
+              <li>preparation du lieu de travail.</li>
+              <li>programation de la machine pour la tâche demandé </li>
+              <li> Verification et controle de qualité.</li>
+              <li>préparation de la commande .</li>
             </ul>
           </div>
           <div class="job">
             <div class="infoContainer">
-              <h2 class="title">Marketing Buyer, <span class="year">July 2007 to February 2015</span></h2>
-              <h2 class="company">GEICO, <span class="location">Chevy Chase, MD</span></h2>
+              <h2 class="title">Opérateur sur machine, <span class="year">juillet 2007 - mai 2019</span></h2>
+              <h2 class="company">Finnord Groupe, <span class="location">Dormelleto , Italia</span></h2>
             </div>
             <ul>
-              <li>Managed national event programs with our experiential marketing company. Activated 293 national events in 2013, 364 national events in 2014 with a 36% planned increase in 2015.</li>
-              <li>Developed and implemented strategic marketing plans for event marketing team.</li>
-              <li>Planned, tracked and maintained $22+ million budget. Consistently improving budget spreadsheets to be a multi-functional tool.</li>
-              <li>Led 20+ Regional Event Marketing Coordinators. Responsibilities included supporting teams with equipment, promotional products, event approval and event payment processing. </li>
-              <li>Created and maintained lead analysis program to measure ROI of events. The key learning from analysis were used in planning and evaluation of marketing strategies and programs.</li>
-              <li>Managed independent sponsorships such as Live Nation, Hershey Park, AZA, Merriweather Post Pavilion and more. Included negotiating contracts, creating marketing strategies, coordinating sponsorship with teams and facilitating support to ensure the success of the program.  </li>
-              <li>Managed promotional products for the event marketing teams. Ensuring GEICO has quality products as giveaways.  Ordered over $2 million of products and maintaining online inventory.</li>
-            </ul>
+              <li> préparation de la machine </li>
+              <li>Approvisionement de la machine.</li>
+              <li>preparation du lieu de travail.</li>
+              <li>programation de la machine pour la tâche demandé </li>
+              <li> Verification et controle de qualité.</li>
+              <li>préparation de la commande .</li>            </ul>
           </div>
           <div class="job">
             <div class="infoContainer">
-              <h2 class="title">Program Accounts Manager, <span class="year">March 2004 to May 2007</span></h2>
-              <h2 class="company">Summit Marketing, <span class="location">Silver Spring, MD</span></h2>
+              <h2 class="title">Opérateur sur machine , <span class="year">juillet 2019 - decembre 2021</span></h2>
+              <h2 class="company">STendem Industie & MOTTEZ <span class="location">Armentières, France</span></h2>
             </div>
             <ul>
-              <li>Collaborated in a team of three to run Summit’s largest account, GEICO.</li>
-              <li>Managed 500+ items for GEICO’s two E-commerce stores, located in three different warehouses.</li>
-              <li>Managed 100+ Independent GEICO Field Representatives with customization program.</li>
-              <li>Brainstormed and produced product ideas for E-Commerce stores, Sales Contests and Custom programs.</li>
-              <li>Provided Customer Service for GEICO’s two E-Commerce stores to all GEICO employees, Field Representatives and the general public.</li>
-            </ul>
+              <li> préparation de la machine </li>
+              <li>Approvisionement de la machine.</li>
+              <li>preparation du lieu de travail.</li>
+              <li>programation de la machine pour la tâche demandé </li>
+              <li> Verification et controle de qualité.</li>
+              <li>préparation de la commande .</li>            </ul>
           </div>
         </div>
       </div>
