modify photo profil

--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,7 @@
 
   <header class="subBanner">
     <div class="email">
-      <a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com">
+      <a href="mailto:mehdi_jouihri@hotmail.com" title="mehdi_jouihri@hotmail.com">
         <i class="far fa-envelope"></i>
         mehdi<span>_</span>jouihri<span>@</span>hotmail.com
 			</a>
