--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
 					</div>
 					<div class="tab">
 						<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
-							<p>Salut, je suis <strong>Jouihri El Mehdi</strong>.<br>
-								A <strong>Front-end Developer</strong><blockquote>Ayant développer des compétences dans différents secteur d'activité, je souhaite m'orienter dans le domaine digital, de nature curieuse, j'ai appris à me former sur différents langage informatique et je suis à la recherche d'un emploi pour confirmer mon projet professionnel </blockquote></p>
+								<p style="color: rgb(207, 201, 194);">
+									Ayant développer des compétences dans différents secteur d'activité, je souhaite m'orienter dans le domaine digital, de nature curieuse, j'ai appris à me former sur différents langage informatique et je suis à la recherche d'un emploi pour confirmer mon projet professionnel </blockquote></p>
+								</p>
 								<div class="links scrollflow">
 									<div class="contact-info">
 
